# backupnado

./: CMakeLists.txt  README.md  linuxbuild.bash  winbuild.cmd
cmake/: Findgit2.cmake
doc/: CodeOfConduct.txt
src/: backupnado.cpp
src/commands/: HelpCommand.cpp  HelpCommand.hpp  InitCommand.cpp  InitCommand.hpp
src/domain/: BackupConfiguration.cpp  BackupConfiguration.hpp  version.cpp  version.hpp
src/helpers/: filehelpers.cpp  filehelpers.hpp  oshelpers.cpp  oshelpers.hpp  stringhelpers.cpp  stringhelpers.hpp
